<resources>
    <string name="app_name">Movies</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="error_placeholder">Ошибка</string>
    <string name="retry">Повторить</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="movie_poster">Постер</string>
    <string name="back">Back</string>
    <string name="empty">"???"</string>

    <string name="error_no_internet">Нет подключения к интернету</string>
    <string name="error_timeout">Превышено время ожидания ответа от сервера</string>
    <string name="error_network">Ошибка сети</string>

    <string name="minutes_format">%1$d мин.</string>
    <string name="original_title_format">Оригинальное название: %1$s</string>
    <string name="status_format">Статус: %1$s</string>
    <string name="budget_format">Бюджет: $%1$s</string>
    <string name="revenue_format">Сборы: $%1$s</string>
</resources>